--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <span class="prompt">rosita@rosita.tech: ~ $ </span><input type="text" id="name" name="name" required minlength="4"
     maxlength="8" size="10">
+  <script src="script.js"></script>
 </body>
 
 </html>
