Fix clear prompt to not clear body

--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
     <p class="tab">Portfolio</p>
     <p>rosita@rosita.tech portfolio: ~</p>
     <p>Type <span id="helpCommand">help</span> to get a list of commands</p>
-    <input
-      type="text"
-      id="input"
-      class="thick-caret-input"
-      name="name"
-      required
-      minlength="4"
-      maxlength="18"
-      size="10"
-      data-1p-ignore
-    />
+
+    <div id="commandsContainer">
+      <input
+        type="text"
+        id="input"
+        class="thick-caret-input"
+        name="name"
+        required
+        minlength="4"
+        maxlength="18"
+        size="10"
+        data-1p-ignore
+      />
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
