--- a/index.html
+++ b/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <p class="tab">Portfolio</p>
-    <p>rosita@rosita.tech portfolio: ~</p>
-    <p>Type <span id="helpCommand">help</span> to get a list of commands</p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
+</head>
 
-    <div id="commandsContainer">
-      <input
-        type="text"
-        id="input"
-        class="thick-caret-input"
-        name="name"
-        required
-        minlength="4"
-        maxlength="18"
-        size="10"
-        data-1p-ignore
-      />
-    </div>
-    <script src="script.js"></script>
-  </body>
+<body>
+  <p class="tab">Portfolio</p>
+  <p>rosita@rosita.tech portfolio: ~</p>
+  <p>Type <span id="helpCommand">help</span> to get a list of commands</p>
+
+  <div id="commandsContainer">
+    <input type="text" id="input" class="thick-caret-input" name="name" required minlength="4" maxlength="18" size="10"
+      data-1p-ignore />
+  </div>
+  <script src="script.js"></script>
+</body>
+
 </html>
