--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
     />
   </head>
   <body>
-    <div id="app"></div>
-    <div class="parent">
-      <div class="div1"></div>
-      <div class="div2">
-        <div class="dot"></div>
-        <div class="dot2"></div>
-        <div class="dot3"></div>
-      </div>
-      <div class="div3"><p class="welcomeBanner">guest@rosita ~</p></div>
-      <div class="div4">
-        <p class="helpWelcome">
-          Type <span id="helpCommand">'help'</span> to get a list of commands
-        </p>
-        <div id="commandsContainer"></div>
+    <div id="app">
+      <div class="parent">
+        <div class="div1"></div>
+        <div class="div2">
+          <div class="dot"></div>
+          <div class="dot2"></div>
+          <div class="dot3"></div>
+        </div>
+        <div class="div3"><p class="welcomeBanner">guest@rosita ~</p></div>
+        <div class="scrollable-content">
+          <div class="div4">
+            <p class="helpWelcome">
+              Type <span id="helpCommand">'help'</span> to get a list of
+              commands
+            </p>
+            <div id="commandsContainer"></div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="./script.js" type="module"></script>
