--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
           <div class="dot2"></div>
           <div class="dot3"></div>
         </div>
-        <div class="div3"><p class="welcomeBanner">guest@rosita ~</p></div>
+        <div class="div3">
+          <p class="welcomeBanner">
+            guest@rosita <span class="tilde-span">~</span>
+          </p>
+        </div>
         <div class="scrollable-content">
           <div class="div4">
             <p class="helpWelcome">
