Update styling and change command prompt

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="div3">
           <p class="welcomeBanner">
-            guest@rosita <span class="tilde-span">~</span>
+            <span class="guest">guest</span>@rosita <span class="tilde-span">~</span>
           </p>
         </div>
         <div class="scrollable-content">
